--- a/.github/workflows/db.yml
+++ b/.github/workflows/db.yml
@@ -21,9 +21,11 @@ jobs:
           role-to-assume: arn:aws:iam::347998599409:role/GitHubActions
           aws-region: us-east-1
 
-      - name: Execute SQL Script on RDS
-        run: |
-          aws rds execute-statement \
-            --resource-arn arn:aws:rds:us-east-1:347998599409:db:simplifynode \
-            --database simplifynode \
-            --sql "SELECT NOW();"
+      - name: Run Liquibase Migration
+        uses: liquibase/liquibase-github-action@v4
+        with:
+          url: "jdbc:oracle:thin:@simplifynode.c5islbzvpxom.us-east-1.rds.amazonaws.com:1521/SFYNODE"
+          username: "GALAXY_SHIELD_NAAP"
+          password: "GALAXY_SHIELD_NAAP"
+          changeLogFile: "db/changelog/db.changelog-master.yaml"
+          command: "update"
