--- a/.github/workflows/db.yml
+++ b/.github/workflows/db.yml
@@ -21,7 +21,7 @@ jobs:
 
       - name: Install SQL*Plus
         run: |
-          sudo apt update && sudo apt install -y libaio1
+          sudo apt update && sudo apt install -y libaio-dev unzip
           curl -O https://download.oracle.com/otn_software/linux/instantclient/instantclient-basiclite-linux.x64-21.10.0.0.0dbru.zip
           unzip instantclient-basiclite-linux.x64-21.10.0.0.0dbru.zip -d /opt/oracle
           echo "/opt/oracle/instantclient_21_10" >> $GITHUB_PATH
