--- a/.github/workflows/db.yml
+++ b/.github/workflows/db.yml
@@ -19,18 +19,15 @@ jobs:
           role-to-assume: arn:aws:iam::347998599409:role/GitHubActions
           aws-region: us-east-1
 
-      - name: Install SQL*Plus
+      - name: Install SQLcl
         run: |
-          sudo apt update && sudo apt install -y libaio-dev unzip
-          curl -O https://download.oracle.com/otn_software/linux/instantclient/instantclient-basiclite-linux.x64-21.10.0.0.0dbru.zip
-          unzip instantclient-basiclite-linux.x64-21.10.0.0.0dbru.zip -d /opt/oracle
-          echo "/opt/oracle/instantclient_21_10" >> $GITHUB_PATH
+          curl -O https://download.oracle.com/otn_software/java/sqldeveloper/sqlcl-23.1.0.097.1704.zip
+          unzip sqlcl-23.1.0.097.1704.zip -d /opt/oracle
+          echo "/opt/oracle/sqlcl/bin" >> $GITHUB_PATH
 
-      - name: Check Oracle Connection
+      - name: Test SQL Connection
         run: |
-          export LD_LIBRARY_PATH=/opt/oracle/instantclient_21_10
-          echo "Checking Oracle database connection..."
-          echo "SELECT SYSDATE FROM DUAL;" | sqlplus -s GALAXY_SHIELD_NAAP/GALAXY_SHIELD_NAAP@//simplifynode.c5islbzvpxom.us-east-1.rds.amazonaws.com:1521/SFYNODE
+          echo "exit" | sql -S GALAXY_SHIELD_NAAP/GALAXY_SHIELD_NAAP@"jdbc:oracle:thin:@simplifynode.c5islbzvpxom.us-east-1.rds.amazonaws.com:1521/SFYNODE"
 
       - name: Run Liquibase Migration
         uses: liquibase/liquibase-github-action@v4
