--- a/.github/workflows/db.yml
+++ b/.github/workflows/db.yml
@@ -57,7 +57,7 @@ jobs:
         with:
           operation: 'update'
           classpath: 'script/APPCATALOG'
-          changeLogFile: 'samplechangelog.sql'
+          changeLogFile: 'changelog.sql'
           url: "jdbc:oracle:thin:@simplifynode.c5islbzvpxom.us-east-1.rds.amazonaws.com:1521/SFYNODE"
           username: "GALAXY_SHIELD_NAAP"
           password: "GALAXY_SHIELD_NAAP"
